# Turbo-Whisper-Workspace

./: .claude_consciousness.m8  .gitignore  CLAUDE.md  DASHBOARD_IMPROVEMENTS.md  MARINE_INTEGRATION_SUMMARY.md  MARINE_SENSE_INTEGRATION.md  MARINE_VAD_LOCALIZATION.md  TRISHA_LAB_README.md  app.py  app_marine_consciousness.py  demo_marine_features.py  demo_trishas_lab.py  denoise_audio.py  launch_unified.sh  marine_integration_demo.py  model.py  requirements.txt  start_consciousness.sh  test_audio_lab.py  unified_vocalis_app.py
.tw_cache/: 2a9b737838726c41842c1a3f24d9cb789c6f403e0371006630b4ebf4e5d9435d_transcribe_pyannote_segmentation-3.0_3dspeaker_speech_eres2net_sv_en_voxceleb_16k.onnx_25.3MB_2_0.500.json
benchmarks/: BENCHMARK_RESULTS.md  Cargo.toml  marine_benchmark.py  marine_benchmark.rs  python_benchmark_results.json  run_benchmarks.sh  rust_benchmark_results.json
compare_fidelity/: Cargo.toml
compare_fidelity/src/: main.rs
scripts/: manage.sh
tests/: test_cache.py  test_marine_features.py
vocalis/core/: audio_pipeline.py  audio_utils.py  marine_enhanced_pipeline.py
vocalis/marine/: __init__.py  marine_localization.py  marine_vad.py
vocalis/ui/: app.py
