[package]
name = "marine-benchmarks"
version = "0.1.0"
edition = "2021"
authors = ["Hue & Claude <team@8b.is>"]
description = "Performance benchmarks for Marine algorithm implementations"

[[bin]]
name = "marine_benchmark"
path = "marine_benchmark.rs"

[dependencies]
marine-algorithm = { path = "/aidata/ayeverse/Marine-Sense/marine-rust" }
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rustc_version_runtime = "0.3"

[profile.release]
opt-level = 3              # Maximum optimization
lto = true                 # Link-time optimization
codegen-units = 1          # Single codegen unit
panic = "abort"            # No unwinding overhead
strip = true               # Strip symbols for smallest binary
